--- a/project/app-h5/src/pages/handicap-tutorial/index.scss
+++ b/project/app-h5/src/pages/handicap-tutorial/index.scss
@@ -50,10 +50,18 @@
     padding-bottom: .70rem;
 }
 
+.ht-congrats {
+    font-size: .18rem;
+    font-weight: 800; color: var(--q-gb-t-c-1);
+    text-align: center;
+    margin-bottom: .3rem;
+}
+
 .ht-handle {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: .24rem;
     .ht-button {
         width: 3.12rem;
         height: .44rem;
@@ -71,5 +79,20 @@
         background-color: var(--q-gb-t-c-14);
         border-color: var(--q-gb-t-c-1);
         color: var(--q-gb-t-c-1);
+    }
+}
+
+.ht-again {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: .16rem;
+    font-weight: 500;
+    color: var(--q-gb-t-c-1);
+    .icon {
+        width: .1rem;
+        height: .1rem;
+        background-color: var(--q-gb-t-c-1);
+        margin-left: .04rem;
     }
 }
